coa picker stuff

--- a/Purchasing.Mvc/Views/Order/Edit.cshtml
+++ b/Purchasing.Mvc/Views/Order/Edit.cshtml
@@ -10,7 +10,7 @@
 
 
 @section AdditionalScripts{
-    <script src="https://finjector.ucdavis.edu/finjector.js" type="text/javascript"></script>
+    <script src="https://finjector.ucdavis.edu/finjector.js?v=5" type="text/javascript"></script>
     @await Html.PartialAsync("_JsBundle", "~/bundles/order")
 
     <script type="text/javascript">
