--- a/Purchasing.Mvc/Views/Order/_Options.cshtml
+++ b/Purchasing.Mvc/Views/Order/_Options.cshtml
@@ -7,6 +7,7 @@ purchasing.options({
     UploadUrl: '@Url.Action("UploadFile")',
     KfsSearchUrl: '@Url.Action("SearchKfsAccounts", "Accounts")',
     KfsSearchSubAccountsUrl: '@Url.Action("SearchSubAccounts", "Accounts")',
+    CoaValidateUrl: '@Url.Action("ValidateCoA", "Order")',
     AddKfsVendorUrl: '@Url.Action("AddKfsVendor", "WorkgroupVendor", new { id = Model.Workgroup.Id })',
     SearchVendorUrl: '@Url.Action("SearchVendor", "WorkgroupVendor")',
     CheckDuplicateVendorUrl: '@Url.Action("CheckDuplicateVendor", "Workgroup")',
