--- a/Purchasing.Mvc/Views/History/_OrdersTable.cshtml
+++ b/Purchasing.Mvc/Views/History/_OrdersTable.cshtml
@@ -226,7 +226,7 @@
 	        }
 	        else
 	        {
-	            result.Append("<td>" + "<span style=\"display:none;\">" + item.DateCreated.Ticks + "</span>" + String.Format("{0:d}", item.DateCreated) + "</td>");
+	            result.Append("<td data-sort=\"" + item.DateCreated.Ticks + "\">" + String.Format("{0:d}", item.DateCreated) + "</td>");
 	        }
 	    }
 	
@@ -238,7 +238,7 @@
 	        }
 	        else
 	        {
-	            result.Append("<td>" + "<span style=\"display:none;\">" + item.LastActionDate.Ticks + "</span>" + String.Format("{0:d}", item.LastActionDate) + "</td>");
+				result.Append("<td data-sort=\"" + item.LastActionDate.Ticks + "\">" + String.Format("{0:d}", item.LastActionDate) + "</td>");
 	        }
 	    }
 	
@@ -286,7 +286,7 @@
 	        }
 	        else
 	        {
-	            result.Append("<td>" + "<span style=\"display:none;\">" + item.DateNeeded.Ticks + "</span>" + String.Format("{0:d}", item.DateNeeded) + "</td>");
+				result.Append("<td data-sort=\"" + item.DateNeeded.Ticks + "\">" + String.Format("{0:d}", item.DateNeeded) + "</td>");
 	        }
 	    }
 	
