Fix button link

--- a/Purchasing.Mvc/Views/Workgroup/Edit.cshtml
+++ b/Purchasing.Mvc/Views/Workgroup/Edit.cshtml
@@ -87,7 +87,7 @@
 {
 	<ul class="navigation">
 		<li>@Html.ActionLink("Details", "Details", new { id = @Model.Workgroup.Id }, new { @class = "button" })</li>
-		<li>@Html.ActionLink("Back to List", "Index", "Edit", new { }, new { @class = "button" })</li>
+        <li>@Html.ActionLink("Back to List", "Index", new { }, new { @class = "button" })</li>
 	</ul>
 }
 
