Report AE extra info

--- a/Purchasing.Mvc/Views/Order/_ReviewAe.cshtml
+++ b/Purchasing.Mvc/Views/Order/_ReviewAe.cshtml
@@ -26,6 +26,8 @@
                         <li><span>Requested: </span><strong id="ae-request-requested"></strong></li>
                         <li><span>Last Update: </span><strong id="ae-request-updated"></strong></li>
                         <li><span>Processed Date: </span><strong id="ae-request-processed"></strong></li>
+                        <li><span>Request: </span><strong id="ae-request-req"></strong></li>
+                        <li><span>PO Number: </span><strong id="ae-request-po"></strong></li>
                     </ul>
                 </div>
                 <div id="ae-loading" class="section-contents">
