Show warning for Last KFS day

--- a/Purchasing.Mvc/Views/Home/Index.cshtml
+++ b/Purchasing.Mvc/Views/Home/Index.cshtml
@@ -193,7 +193,7 @@
 			  PrePurchasing has been approved as a "critical" boundary application in the grand <a href="https://financeandbusiness.ucdavis.edu/aggie-enterprise/system" target="_blank">Aggie Enterprise financial system</a> transition project.
 			</p>
 			<p>
-			  While there are still many unknowns, we are committed to updating PrePurchasing to work with Aggie Enterprise from day 1 (July 2023).  
+			  While there are still many unknowns, we are committed to updating PrePurchasing to work with Aggie Enterprise from day 1 (January 1 2024).  
 				Work has already begun in the background to update many parts of this system and changes will roll out transparently throughout the next year.				
 			</p>
 			<p>
@@ -201,6 +201,9 @@
 				With large changes in account format, organizational structure, and procurement metadata, it's safe to anticipate that major changes will be required, though we expect most functionality should remain the same and changes will be thoroughly and widely discussed before being implemented.
 			</p>
             <p><a href="https://computing.caes.ucdavis.edu/documentation/purchasing/Aggie-Enterprise-Updates" target="_blank">Click here to see our Aggie Enterprise Updates and Planned Changes.</a></p>
+            <div id="error-message">
+                WARNING!!! The last day to complete order in KFS is November 22th, 2023  After this date, these types of orders must be completed in Aggie Enterprise January 1st 2024.
+            </div>
 		</div>
                 
                 
