Site Code for vendor info

--- a/Purchasing.Mvc/Views/Wizard/_VendorTable.cshtml
+++ b/Purchasing.Mvc/Views/Wizard/_VendorTable.cshtml
@@ -6,6 +6,7 @@
 			<th>
 				Name
 			</th>
+			<th>Site Code</th>
 			<th>
 				Line1
 			</th>
@@ -47,6 +48,7 @@
 			<td>
 				@item.Name
 			</td>
+				<td>@item.AeSupplierSiteCode</td>
 			<td>
 				@item.Line1
 			</td>
