--- a/Purchasing.Mvc/Views/Workgroup/VendorList.cshtml
+++ b/Purchasing.Mvc/Views/Workgroup/VendorList.cshtml
@@ -21,6 +21,7 @@
 			<th>
 				Name
 			</th>
+			<th>Site Code</th>
 			<th>
 				Line1
 			</th>
@@ -69,6 +70,7 @@
 			<td>
 				@item.Name
 			</td>
+			<td>@item.AeSupplierSiteCode</td>
 			<td>
 				@item.Line1
 			</td>
