--- a/Purchasing.Mvc/Views/Shared/_Layout.cshtml
+++ b/Purchasing.Mvc/Views/Shared/_Layout.cshtml
@@ -148,6 +148,7 @@
                         {
                             <li>@Html.ActionLink("Administrators", "Index", "Admin", new { }, new { @class = "navigation-button" })</li>   
                             <li>@Html.ActionLink("Dept Admin Requests", "Index", "DepartmentalAdminRequest", new { }, new { @class = "navigation-button" })</li>
+                            <li>@Html.ActionLink("Add Manual Org", "AddOrg", "Admin", new { }, new { @class = "navigation-button" })</li>
                             <li>@Html.ActionLink("Service Messages", "Index", "ServiceMessage", new {}, new {@class="navigation-button"})</li> 
                             <li>@Html.ActionLink("Update Child Workgroups", "UpdateChildWorkgroups", "Admin", new { }, new { @class = "navigation-button" })</li>
                             <li>@Html.ActionLink("Validate Child Workgroups", "ValidateChildWorkgroups", "Admin", new { }, new { @class = "navigation-button" })</li>
