--- a/Purchasing.Mvc/Views/Order/_ReviewSubmit.cshtml
+++ b/Purchasing.Mvc/Views/Order/_ReviewSubmit.cshtml
@@ -26,7 +26,7 @@
             if (Model.IsPurchaser)
             {
                 <div id="error-message">
-                    WARNING!!! The last day to complete order in KFS is November 22th, 2023  After this date, these types of orders must be completed in Aggie Enterprise January 1st 2024.
+                    WARNING!!! The last day to complete KFS orders was November 22th, 2023  After this date, these types of orders must be completed in Aggie Enterprise in January 2024.
                 </div>
             }
         }
