Updates for AE going Live

--- a/Purchasing.Mvc/Views/Order/_ReviewSubmit.cshtml
+++ b/Purchasing.Mvc/Views/Order/_ReviewSubmit.cshtml
@@ -25,8 +25,8 @@
         {
             if (Model.IsPurchaser)
             {
-                <div id="error-message">
-                    WARNING!!! The last day to complete KFS orders was November 22th, 2023  After this date, these types of orders must be completed in Aggie Enterprise in January 2024.
+                <div id="status-message">
+                    You may now complete orders in Aggie Enterprise!
                 </div>
             }
         }
