--- a/Purchasing.Mvc/Views/Home/Index.cshtml
+++ b/Purchasing.Mvc/Views/Home/Index.cshtml
@@ -190,17 +190,10 @@
 			<h2>Aggie Enterprise Announcement!</h2>
 			
 			<p>
-			  PrePurchasing has been approved as a "critical" boundary application in the grand <a href="https://financeandbusiness.ucdavis.edu/aggie-enterprise/system" target="_blank">Aggie Enterprise financial system</a> transition project.
+			  PrePurchasing is live for creating Purchase Requsitions in Aggie Enterprise!!!
 			</p>
-			<p>
-			  While there are still many unknowns, we are committed to updating PrePurchasing to work with Aggie Enterprise from day 1 (January 1 2024).  
-				Work has already begun in the background to update many parts of this system and changes will roll out transparently throughout the next year.				
-			</p>
-			<p>
-			  As Aggie Enterprise testing progresses, we will update this space with a detailed roadmap, announcements, and requests for your comments.
-				With large changes in account format, organizational structure, and procurement metadata, it's safe to anticipate that major changes will be required, though we expect most functionality should remain the same and changes will be thoroughly and widely discussed before being implemented.
-			</p>
-            <p><a href="https://computing.caes.ucdavis.edu/documentation/purchasing/Aggie-Enterprise-Updates" target="_blank">Click here to see our Aggie Enterprise Updates and Planned Changes.</a></p>
+
+            <p><a href="https://computing.caes.ucdavis.edu/documentation/purchasing/Aggie-Enterprise-Updates" target="_blank">This FAQ has some updates and useful information.</a></p>
 		</div>
                 
                 
