--- a/Purchasing.Mvc/Views/Order/_ReviewOrderDetails.cshtml
+++ b/Purchasing.Mvc/Views/Order/_ReviewOrderDetails.cshtml
@@ -60,7 +60,7 @@
                         @if (ViewBag.HideEditDialogue == null || (bool)ViewBag.HideEditDialogue == false)
                         {
                             //Leaving this here for now in case we want to enable it later
-                            //Basically it is a problem in the end user changes this value for Aggie Enterprise where it was useful for KFS
+                            //Basically it is a problem if the end user changes this value for Aggie Enterprise where it was useful for KFS
                             //<a id="edit-reference-number" href="#" class="ui-icon ui-icon-pencil" title="Edit Reference Number"></a>
                         }
                     </li>
