--- a/Purchasing.Mvc/Views/Order/_ReviewLineSplits.cshtml
+++ b/Purchasing.Mvc/Views/Order/_ReviewLineSplits.cshtml
@@ -14,7 +14,16 @@
                 var split = Model.Splits.Single();
 
                 <div class="acct-info">
-                    <strong>Account:</strong> <span class="account">@split.AccountDisplay</span>
+                    @if(!string.IsNullOrWhiteSpace(split.FinancialSegmentString))
+                    {
+                        var link = $"https://finjector.ucdavis.edu/Details/{split.FinancialSegmentString}";
+                        <strong>Account:</strong> <span class="account"><a href=@link target="_blank" style="text-decoration:underline">@split.AccountDisplay</a> </span>
+                    }
+                    else
+                    {
+                        <strong>Account:</strong> <span class="account">@split.AccountDisplay</span>
+                    }
+                    
                     @if (string.IsNullOrWhiteSpace(split.FinancialSegmentString))
                     {
                         <strong>SubAccount:</strong><span class="subaccount">@Model.GetSubAccountDisplayForSplit(@split)</span>
@@ -39,9 +48,18 @@
 
                     <tbody>
                         @foreach (var split in Model.Splits)
-                        { 
-                            <tr>
-                                <td>@split.AccountDisplay</td>
+                            {
+                                <tr>
+                                    @if (!string.IsNullOrWhiteSpace(split.FinancialSegmentString))
+                                    {
+                                        var link = $"https://finjector.ucdavis.edu/Details/{split.FinancialSegmentString}";
+                                        <td><a href=@link target="_blank" style="text-decoration:underline">@split.AccountDisplay</a> </td>
+                                    }
+                                    else
+                                    {
+                                        <td>@split.AccountDisplay</td>
+                                    }
+                                    
                                 <td>@Model.GetSubAccountDisplayForSplit(@split)</td>
                                 <td>@split.Project</td>
                                 <td>@split.Amount</td>
