--- a/Purchasing.Mvc/Views/Workgroup/UpdateAccountsFromFinjector.cshtml
+++ b/Purchasing.Mvc/Views/Workgroup/UpdateAccountsFromFinjector.cshtml
@@ -70,7 +70,7 @@
             <div class="section-text">
                 <p>To import Chart Strings from Finjector, you must first click the Import button, then select the team or folder you wish to import from the popup window.</p>
                 <p>If any are found, you will see that information below and you can then click the Update Accounts.</p>
-                <p>IMPORTANT!!! This will remove any workgroup accounts that do not match the chart strings you have selected. And will update the name if it has changed.</p>
+                <p>IMPORTANT!!! This will update the name if it has changed and this will remove any workgroup accounts that do not match the chart strings you have selected if Only Add and Update Chart Strings is No.</p>
             </div>
 
 
