--- a/Purchasing.Mvc/Views/Wizard/Accounts.cshtml
+++ b/Purchasing.Mvc/Views/Wizard/Accounts.cshtml
@@ -7,7 +7,7 @@
     ViewBag.Next = Url.Action("Vendors", "Wizard", new { id = Model.Id });
     ViewBag.ListPage = true;
     ViewBag.IsAdministrative = Model.Administrative;
-    ViewBag.IsAccountSync = Model.SyncAccounts;
+    ViewBag.IsAccountSync = false;
 }
 
 @section AdditionalScripts{
