--- a/Purchasing.Mvc/Views/Wizard/AddPeople.cshtml
+++ b/Purchasing.Mvc/Views/Wizard/AddPeople.cshtml
@@ -70,7 +70,7 @@
             break;
     }
     ViewBag.IsAdministrative = Model.Workgroup.Administrative;
-    ViewBag.IsAccountSync = Model.Workgroup.SyncAccounts;
+    ViewBag.IsAccountSync = false;
 }
 
 
